# paralegal-lk-internship-assignment

./: .gitignore  README.md  Workflow.md
output/: sample-judgment-1.json  sample-judgment-2.json  sample-judgment-3.json  sample-judgment-4.json
solution/: pyproject.toml
solution/src/judge_extractor/: __init__.py  cli.py  extractor.py
solution/tests/: test_extractor.py
